...
            "value" : "známky: %lld"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Marks: %lld"
          }
        },
        "en-CO" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "marks: %lld"
...
    },
    "timetable.today" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dnes"
          }
        },
        "cs-US" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "dnes"
...
